--- a/CA3.ipynb
+++ b/CA3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
     "    \"\"\"\n",
     "    \n",
     "    # Assume that the dataset is located on folder \"data\"\n",
-    "    data = pd.read_csv('data/household_power_consumption.txt',\n",
+    "    data = pd.read_csv('Data/household_power_consumption.txt',\n",
     "                       sep=';', low_memory=False)\n",
     "\n",
     "    # Drop some non-predictive variables\n",
@@ -65,12 +65,12 @@
     "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.25)\n",
     "    no_class = 2                 #binary classification\n",
     "\n",
-    "    return X_train, X_test, y_train, y_test, no_class\n"
+    "    return X_train.T, X_test.T, y_train, y_test, no_class\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +78,7 @@
      "output_type": "stream",
      "text": [
       "X,y types: <class 'numpy.ndarray'> <class 'numpy.ndarray'>\n",
-      "X size (1536960, 6)\n",
+      "X size (6, 1536960)\n",
       "Y size (1536960,)\n"
      ]
     }
@@ -100,9 +100,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(6, 1536960)\n",
+      "(3, 1536960)\n",
+      "(3, 1536960)\n",
+      "[ 0.03801854  0.17905696 -0.7712544  -0.18233673 -0.2230358  -0.7654772 ]\n",
+      "[0.46858383 0.35923247 0.61593093]\n",
+      "368561.0112404682\n"
+     ]
+    }
+   ],
    "source": [
     "# Sigmoid function\n",
     "def sigmoid(x, derivative=False):\n",
@@ -118,7 +131,13 @@
     "# Fill in feed forward propagation\n",
     "def feed_forward_propagation(X, y, w_1, w_2, w_3, lmbda):\n",
     "    # Fill in\n",
-    "    \n",
+    "    #X is q x n\n",
+    "    # w_1 is q x p\n",
+    "    # w_2 is \n",
+    "    layer_0=X # q x n\n",
+    "    layer_1=sigmoid(np.matmul(w_1.T , X)) # p x n \n",
+    "    layer_2=sigmoid(np.matmul(w_2.T , layer_1)) # p x n \n",
+    "    layer_3=np.matmul(w_3.T , layer_2) # p x n\n",
     "    return layer_0, layer_1, layer_2, layer_3\n",
     "    \n",
     "# Fill in backpropagation    \n",
@@ -162,7 +181,33 @@
     "def BCD(X, y, w_1,w_2,w_3, learning_rate, lmbda, iterations):\n",
     "    # Complete here:\n",
     "    \n",
-    "    return w_1, w_2, w_3"
+    "    return w_1, w_2, w_3\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Should be a hyperparameter that you tune, not an argument - Fill in the values\n",
+    "parser = argparse.ArgumentParser()\n",
+    "parser.add_argument('--lambda', type=float, default=0.1, dest='lmbda') \n",
+    "parser.add_argument('--w_size', type=int, default=3, dest='w_size')\n",
+    "parser.add_argument('--lr', type=float, default=0.1)\n",
+    "parser.add_argument('--iterations', type=int, default=100)\n",
+    "\n",
+    "#args = parser.parse_args()\n",
+    "\n",
+    "w_1 = initialize_w(X_train.shape[0], 3)\n",
+    "w_2 = initialize_w(3,3)\n",
+    "w_3 = initialize_w(3, 1)\n",
+    "lmbda=0.1\n",
+    "\n",
+    "cost=cost(X_train,y_train,w_1,w_2,w_3,lmbda)\n",
+    "a1,a2,a3,a4 = feed_forward_propagation(X_train,y_train,w_1,w_2,w_3,lmbda)\n",
+    "print(a1.shape)\n",
+    "print(a2.shape)\n",
+    "print(a3.shape)\n",
+    "\n",
+    "print(a1[:,1])\n",
+    "print(a2[:,1])\n",
+    "print(cost)\n"
    ]
   },
   {
@@ -181,7 +226,7 @@
     "args = parser.parse_args()\n",
     "\n",
     "# Initialize weights\n",
-    "w_1 = initialize_w(X_train.shape[1], args.w_size)\n",
+    "w_1 = initialize_w(X_train.shape[0], args.w_size)\n",
     "\n",
     "w_2 = initialize_w(args.w_size,args.w_size)\n",
     "\n",
@@ -280,7 +325,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
