--- a/CA4.ipynb
+++ b/CA4.ipynb
@@ -2425,7 +2425,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From the above figure, we infer that, as $p$ and $R$ increases, the number of iterations required to achieve the same gradient norm in the noiseless case (with in 50 iterations), increases quickly."
+    "### From the above figures, we infer that, as $p$ and $R$ increases, the convergence of $w$ is significantly affected. Furthermore, for large enough $R$ value convergence may not be guaranteed."
    ]
   },
   {
