--- a/MLoN course/CA5.ipynb
+++ b/MLoN course/CA5.ipynb
@@ -564,6 +564,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Preparing the dataset\n",
+    "# Setup train and test splits\n",
+    "(x_train, y_train), (x_test, y_test) = mnist.load_data()\n",
+    "\n",
+    "# Making a copy before flattening for the next code-segment which displays images\n",
+    "x_train_drawing = x_train\n",
+    "\n",
+    "image_size = 784 # 28 x 28\n",
+    "x_train = x_train.reshape(x_train.shape[0], image_size) \n",
+    "x_test = x_test.reshape(x_test.shape[0], image_size)\n",
+    "\n",
+    "# Convert class vectors to binary class matrices\n",
+    "num_classes = 10\n",
+    "y_train = keras.utils.to_categorical(y_train, num_classes)\n",
+    "y_test = keras.utils.to_categorical(y_test, num_classes)\n",
+    "\n",
+    "# Show some random digits\n",
+    "for i in range(64):\n",
+    "    ax = plt.subplot(8, 8, i+1)\n",
+    "    ax.axis('off')\n",
+    "    plt.imshow(x_train_drawing[randint(0, x_train.shape[0])], cmap='Greys')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [],
@@ -1179,7 +1208,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
